--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build.environment]
   NODE_VERSION = "16"
+  NPM_FLAGS = "--version" # prevent Netlify npm install
 
 [build]
   publish = "docs/.vuepress/dist"
